--- a/src/Styles/_page.scss
+++ b/src/Styles/_page.scss
@@ -59,11 +59,12 @@
     margin: 0.3rem;
     cursor: default;
     padding-top: 0.8rem;
-    &.compact-page {
+    &.compacted-block {
       margin: 0.05rem;
       padding-top: 5px;
       .media-container {
         margin-bottom: 0;
+        max-width: 95%;
       }
     }
     &.single-click {
