--- a/src/Styles/_uihelpers.scss
+++ b/src/Styles/_uihelpers.scss
@@ -76,6 +76,33 @@
   }
 }
 
+#corner-message-container {
+  pointer-events: none;
+  height: 99.5%;
+  min-width: 5rem;
+  position: fixed;
+  top: 2rem;
+  h1 {
+    font-family: "mukta";
+    font-size: 1rem;
+    background-color: #111;
+    color: white;
+    padding: 0.2rem;
+    width: max-content;
+    pointer-events: all;
+    position: absolute;
+    &:hover {
+      opacity: 0.3;
+    }
+  }
+  #directory-items-count {
+    border-top-right-radius: 0.5rem;
+    transform: translateY(-50%);
+    bottom: -3px;
+    left: -0.2rem;
+  }
+}
+
 #custom-title {
   padding: 4px 1rem 4px 4px;
   font-size: 0.9rem;
@@ -123,6 +150,7 @@
     filter: blur(1px);
   }
 }
+
 #buttons-container {
   height: 2rem;
   width: 100%;
