--- a/src/Styles/_directorytree.scss
+++ b/src/Styles/_directorytree.scss
@@ -177,6 +177,30 @@
         background-color: #999;
         transition: all 50ms ease-in;
       }
+      &#current-directory-sky-blue {
+        background-color: rgb(0, 0, 25);
+        * {
+          color: white;
+          font-weight: bold;
+        }
+      }
+      &.parent-directory-sky-blue {
+        background-color: darken(#006d99, 20%);
+        * {
+          color: white;
+        }
+        &:hover {
+          background-color: darken(#006d99, 10%);
+          transition: all 50ms ease-in;
+        }
+      }
+      &.child-directory-sky-blue:hover {
+        background-color: darken(#006d99, 20%);
+        * {
+          color: white;
+        }
+        transition: all 50ms ease-in;
+      }
       .directory-name {
         outline: none;
         pointer-events: none;
@@ -199,7 +223,6 @@
         }
       }
     }
-
     .child-directory {
       display: flex;
       flex-direction: row;
