--- a/src/Styles/_uihelpers.scss
+++ b/src/Styles/_uihelpers.scss
@@ -193,7 +193,9 @@
   &.popup-body-light-mode {
     background-color: #ccc;
   }
-
+  &.popup-body-sky-blue {
+    background-color: #87ceeb;
+  }
   #frame-top {
     width: 100%;
     height: 2rem;
@@ -210,6 +212,9 @@
     &.frame-top-light-mode {
       background-color: #888;
       outline: 1.5px solid #000;
+    }
+    &.frame-top-sky-blue {
+      background-color: darken(#87ceeb, 50%);
     }
     #popup-label {
       font-family: mukta;
