--- a/src/Styles/DirectoryPage/_tilesview.scss
+++ b/src/Styles/DirectoryPage/_tilesview.scss
@@ -27,7 +27,9 @@
       position: absolute;
       left: 4rem;
       top: 0.5rem;
+      line-height: 0.9rem;
       .block-name {
+        line-height: 0.9rem;
         height: 2rem;
         width: 100%;
         position: absolute;
