--- a/src/Styles/DirectoryPage/_iconview.scss
+++ b/src/Styles/DirectoryPage/_iconview.scss
@@ -17,7 +17,7 @@
       margin-bottom: 0.5rem;
       .media-thumbnail {
         max-width: 100%;
-        box-shadow: 2px 2px 0.3rem black;
+        box-shadow: 4px 4px 0.3rem #111;
       }
       .duration {
         position: absolute;
