--- a/src/Styles/_general.scss
+++ b/src/Styles/_general.scss
@@ -46,10 +46,7 @@ body {
 }
 
 @mixin Buttons {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  outline: none;
   border-radius: 2px;
   background-color: #777;
   border: none;
@@ -72,6 +69,17 @@ body {
     background-color: darkgrey !important;
     border: grey !important;
     cursor: not-allowed !important;
+  }
+}
+
+@mixin Input {
+  outline: none;
+  border: none;
+  cursor: default;
+  font-family: akshar;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  &.input-dark-mode {
   }
 }
 
