--- a/src/Styles/_popups.scss
+++ b/src/Styles/_popups.scss
@@ -169,22 +169,60 @@ button {
 }
 
 #archive-body {
-  width: 90%;
-  #destination-selector {
+  margin-inline: 1rem;
+  width: 40rem;
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+  * {
+    color: white;
+  }
+  #select-archive-destination {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
-    height: 2rem;
+    * {
+      max-height: 90%;
+    }
+  }
+  #destination-selector {
     background-color: #fff;
     font-family: akshar;
     font-weight: bold;
-    border-radius: 5px;
+    border-radius: 3px;
     background-color: #666;
     cursor: pointer;
-    * {
-      max-height: 90%;
-      pointer-events: none;
-    }
+    flex-grow: 3;
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  #output-file-path {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    font-family: bebas neue;
+    height: 2rem;
+  }
+  input {
+    color: black;
+    outline: none;
+    border: none;
+    flex-grow: 2;
+    margin-left: 0.5rem;
+    border-radius: 3px;
+  }
+  pre {
+    max-width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
